fix: 🐛 Body overflow issue fixed

--- a/vue_app/public/global.css
+++ b/vue_app/public/global.css
@@ -66,6 +66,7 @@ body {
   padding: 0;
   font-family: 'Open Sans', sans-serif;
   position: relative;
+  overflow: hidden;
 }
 
 .content-wrapper {
